--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <!--
+                    Для запуска тестов помеченных тэгом
+                    -->
+                    <groups>
+                       controllers
+                    </groups>
+                    <!-- Для пропуска тестов помеченных тэгом -->
+                    <excludedGroups>
+                        model
+                    </excludedGroups>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
